--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Gaurav Misra",
   "license": "ISC",
   "dependencies": {
+    "@types/express-serve-static-core": "^4.17.24",
     "dotenv": "^10.0.0",
     "eslint": "^7.30.0",
     "eslint-config-prettier": "^8.3.0",
@@ -20,6 +21,8 @@
     "prettier": "^2.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^14.15.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
