--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "slugify": "^1.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
