--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
     "prettier": "^2.3.2",
-    "slugify": "^1.6.0"
+    "slugify": "^1.6.0",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
