Swagger Ui added for gET reqest and JWT logic added

--- a/config.env
+++ b/config.env
@@ -4,3 +4,5 @@ USER=gsmisra
 DATABASE=mongodb+srv://gsmisra:<PASSWORD>@cluster0.xbrod.mongodb.net/natours?retryWrites=true&w=majority
 #DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=mongodb1
+JWT_SECRET=my-secret-long-encrypted-string
+JwT_EXPIRY_TIMER=90d
