--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.2",
     "morgan": "^1.10.0",
     "ndb": "^1.1.5",
     "prettier": "^2.3.2",
     "slugify": "^1.6.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^13.6.0"
   },
   "devDependencies": {
